# framingham

./: .editorconfig  README.MD  meson.build
src/: .framingham.c.swp  framingham.c
